--- a/Challenges/Day_04/style.css
+++ b/Challenges/Day_04/style.css
@@ -5,7 +5,7 @@ body{
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color:whitesmoke;
+  background-color:rgb(255, 255, 255);
 }
 
 input[type="checkbox"]{
@@ -17,7 +17,7 @@ input[type="checkbox"]{
   display: block;
   width: 100px;
   height: 60px;
-  background-color:#020B29;
+  background-color:#fcfbfb;
   cursor: pointer;
   border-radius: 50px;
   overflow: hidden;
@@ -25,8 +25,8 @@ input[type="checkbox"]{
 }
 
 input[type="checkbox"]:checked ~ .check{
-  background: whitesmoke;
-  box-shadow: 0 0 0 1200px #020B29;
+  background: rgb(253, 251, 251);
+  box-shadow: 0 0 0 1200px #f28509;
 }
 
 input[type="checkbox"]:checked ~ .check:before{
@@ -54,7 +54,7 @@ input[type="checkbox"]:checked ~ .check:after{
   position: absolute;
   top: 15px;
   left: 10px;
-  background-color: #020B29;
+  background-color: #051fe3;
   width: 30px;
   height: 30px;
   border-radius: 50%;
