--- a/Challenges/Day_05/style.css
+++ b/Challenges/Day_05/style.css
@@ -3,7 +3,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:pink;
+    background-color:rgb(192, 255, 217);
 }
 
 h1 {
